--- a/airplane_mode/templates/pages/base.html
+++ b/airplane_mode/templates/pages/base.html
@@ -25,7 +25,7 @@
            </a>
         </div>
         <div class="nav-link-container">
-            <a href="#" class="nav-link"> Airports</a>
+            <a href="/airports" class="nav-link"> Airports</a>
             <a href="/shops" class="nav-link">Shops</a>
             <a href="/flights" class="nav-link" target="_blank" >Flights</a>
             <a href="#" class="nav-link"> Contact-us</a>
